syntax = "proto3";

package userapi;

option go_package = "github.com/edgelesssys/contrast/internal/userapi";

service UserAPI {
  rpc SetManifest(SetManifestRequest) returns (SetManifestResponse);
  rpc GetManifests(GetManifestsRequest) returns (GetManifestsResponse);
}

message SetManifestRequest {
  bytes Manifest = 1;
  repeated bytes Policies = 2;
}

message SetManifestResponse {
  // PEM-encoded certificate
  bytes RootCA = 1;
  // PEM-encoded certificate
  bytes MeshCA = 2;
}

message GetManifestsRequest {}

message GetManifestsResponse {
  repeated bytes Manifests = 1;
  repeated bytes Policies = 2;
  // PEM-encoded certificate
  bytes RootCA = 3;
  // PEM-encoded certificate
  bytes MeshCA = 4;
}
